--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-"Hello World" 
+<html>
+  <body>
+    <h1>Hello World</h1>
+      <h2>About Me</h2>
+        <p>This is the website of Franklin Castillo, which I host in GitHub</p>
+      <h2>Contact me</h2>
+        <p>
+          Medium (Blog on Politics, International Relations, Economics, Technology, FinCrime, and so on.)<br/>
+          LinkedIn<br/>
+          Twitter<br/>
+        </p>
+  </body>
+</html>
