--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8"
+          name="description"
+          content="Website of Frank R Castillo"/>
+    <title>Frank R Castillo</title>
   </head>
   <body>
     <h1>Hello World</h1>
