--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"
           name="description"
           content="Website of Frank R Castillo"/>
+    <basefont face="helvetica"/>
     <title>Frank R Castillo</title>
   </head>
   <body>
