--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="utf-8"
           name="description"
           content="Website of Frank R Castillo"/>
-    <basefont face="helvetica"/>
     <title>Frank R Castillo</title>
+    <style>
+      body {background-color: rgb(40, 60, 70);}
+      h1   {color: rgb(200, 215, 220);}
+      h2   {color: rgb(175, 190, 195);}
+      p    {color: rgb(250, 250, 250);}
+    </style>
   </head>
   <body>
     <h1>Hello World</h1>
