--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
           content="Website of Frank R Castillo"/>
     <title>Frank R Castillo</title>
     <style>
-      body {background-color: rgb(40, 60, 70);}
+      body {background-color: rgb(40, 60, 70);
+            font-family: helvetica;}
       h1   {color: rgb(200, 215, 220);}
       h2   {color: rgb(175, 190, 195);}
       p    {color: rgb(250, 250, 250);}
