--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Frank R Castillo</title>
     <style>
       body {background-color: rgb(40, 60, 70);
-            font-family: helvetica;}
+            font-family: consolas;}
       h1   {color: rgb(200, 215, 220);}
       h2   {color: rgb(175, 190, 195);}
       p    {color: rgb(250, 250, 250);}
