--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     </style>
   </head>
   <body>
-    <h1>Hello World</h1>
-      <h2>About Me</h2>
+    <h1>Frank R Castillo | </h1>
+      <h2>About</h2>
         <p>This is the website of Franklin Castillo, which I host in GitHub</p>
-      <h2>Contact me</h2>
+      <h2>Content</h2>
+        <h3>Medium</h3>
+        <h3>YouTube</h3>
+        <h3>Twitter</h3>
+      <h2>Contact</h2>
         <p>
           Medium (Blog on Politics, International Relations, Economics, Technology, FinCrime, and so on.)<br/>
           LinkedIn<br/>
