--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Frank R Castillo</title>
     <style>
       body {background-color: rgb(40, 60, 70);
-            font-family: consolas;}
+            font-family: consolas;
+            color: rgb(250, 250, 250);}
       h1   {color: rgb(200, 215, 220);}
       h2   {color: rgb(175, 190, 195);}
-      p    {color: rgb(250, 250, 250);}
     </style>
   </head>
   <body>
