--- a/index.html
+++ b/index.html
@@ -7,14 +7,41 @@
     <title>Frank R Castillo</title>
     <style>
       body {background-color: rgb(40, 60, 70);
-            font-family: consolas;
+            font-family: calibri;
             color: rgb(250, 250, 250);}
       h1   {color: rgb(200, 215, 220);}
-      h2   {color: rgb(175, 190, 195);}
+      h2   {color: rgb(175, 190, 195);
+      	    text-indent: 1em;}
+      h3   {text-indent: 2em;}
+      p	   {text-indent: 3em;}
+      a    {text-decoration: none;}
+      img.icon {height: 25px;
+                width: 25px;}
     </style>
   </head>
   <body>
-    <h1>Frank R Castillo | </h1>
+    <h1>Frank R. Castillo
+    	<a href="https://medium.com/frank-r-castillo"
+    	   target="_blank">
+	    	<img src="icons/medium.png"
+	    	     class="icon"/>
+        </a>
+    	<a href="https://twitter.com/FrankRCastillo"
+    	   target="_blank">
+	    	<img src="icons/twitter.png"
+	    	     class="icon"/>
+        </a>
+    	<a href="https://www.linkedin.com/in/franklinrcastillo/"
+    	   target="_blank">
+	    	<img src="icons/linkedin.png"
+	    	     class="icon"/>
+        </a>
+    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g"
+    	   target="_blank">
+	    	<img src="icons/youtube.png"
+	    	     class="icon"/>
+        </a>        
+    </h1>
       <h2>About</h2>
         <p>This is the website of Franklin Castillo, which I host in GitHub</p>
       <h2>Content</h2>
