--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
     <h1>Frank R. Castillo
     	<a href="https://medium.com/frank-r-castillo"
     	   target="_blank">
-	    	<img src="icons/medium.png"
+	    	<img src="../icons/medium.png"
 	    	     class="icon"/>
         </a>
     	<a href="https://twitter.com/FrankRCastillo"
     	   target="_blank">
-	    	<img src="icons/twitter.png"
-	    	     class="icon"/>
+	    	<img src="../icons/twitter.png"
+	    	     class="../icon"/>
         </a>
     	<a href="https://www.linkedin.com/in/franklinrcastillo/"
     	   target="_blank">
-	    	<img src="icons/linkedin.png"
+	    	<img src="../icons/linkedin.png"
 	    	     class="icon"/>
         </a>
     	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g"
     	   target="_blank">
-	    	<img src="icons/youtube.png"
+	    	<img src="../icons/youtube.png"
 	    	     class="icon"/>
         </a>        
     </h1>
