--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
     <h1>Frank R. Castillo
     	<a href="https://medium.com/frank-r-castillo"
     	   target="_blank">
-	    	<img src="https://github.com/FrankRCastillo/frankrcastillo.github.io/blob/master/Icons/medium.png"
+	    	<img src="Icons/medium.png"
 	    	     class="icon"/>
         </a>
     	<a href="https://twitter.com/FrankRCastillo"
     	   target="_blank">
-	    	<img src="https://github.com/FrankRCastillo/frankrcastillo.github.io/blob/master/Icons/twitter.png"
+	    	<img src="Icons/twitter.png"
 	    	     class="../icon"/>
         </a>
     	<a href="https://www.linkedin.com/in/franklinrcastillo/"
     	   target="_blank">
-	    	<img src="https://github.com/FrankRCastillo/frankrcastillo.github.io/blob/master/Icons/linkedin.png"
+	    	<img src="Icons/linkedin.png"
 	    	     class="icon"/>
         </a>
     	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g"
     	   target="_blank">
-	    	<img src="https://github.com/FrankRCastillo/frankrcastillo.github.io/blob/master/Icons/youtube.png"
+	    	<img src="Icons/youtube.png"
 	    	     class="icon"/>
         </a>        
     </h1>
