--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     	<a href="https://twitter.com/FrankRCastillo"
     	   target="_blank">
 	    	<img src="Icons/twitter.png"
-	    	     class="../icon"/>
+	    	     class="icon"/>
         </a>
     	<a href="https://www.linkedin.com/in/franklinrcastillo/"
     	   target="_blank">
