--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
           content="Website of Frank R Castillo"/>
     <title>Frank R Castillo</title>
     <style>
-      body {background-color: rgb(40, 60, 70);
+      body {background-color: rgb(255, 255, 255);
             font-family: calibri;
-            color: rgb(250, 250, 250);}
-      h1   {color: rgb(200, 215, 220);}
-      h2   {color: rgb(175, 190, 195);
-      	    text-indent: 1em;}
-      h3   {text-indent: 2em;}
-      p	   {text-indent: 3em;}
+            color: rgb(70, 70, 70);}
+      h1   {color: rgb(90, 90, 90);
+      		text-indent: 1em}
+      h2   {color: rgb(110, 110, 110);
+      	    text-indent: 2em;}
+      h3   {color: rgb(130, 130, 130);
+      		text-indent: 3em;}
+      p	   {text-indent: 4em;}
       a    {text-decoration: none;}
       img.icon {height: 25px;
                 width: 25px;}
