--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="feedek/FeedEk.css"
           rel="stylesheet"
           type="text/css"/>
-	<script type="text/javascript" src="feedek/FeedEk.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://momentjs.com/downloads/moment-with-langs.min.js"></script>
+    <script type="text/javascript" src="feedek/FeedEk.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#divRss').FeedEk({
@@ -62,7 +64,6 @@
       <h2>Content</h2>
         <h3>Blog</h3>
 			<div id="divRss"></div>
-
         <h3>Academics</h3>
   </body>
 </html>
