--- a/index.html
+++ b/index.html
@@ -14,25 +14,36 @@
     <script type="text/javascript" src="feedek/FeedEk.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#divRss').FeedEk({
-                FeedUrl: 'https://medium.com/feed/frank-r-castillo',
-                MaxCount: 3
-            });
+            $('#MediumRss').FeedEk({
+            	FeedUrl: 'https://medium.com/feed/frank-r-castillo',
+            	MaxCount: 100,
+				ShowDesc: false });
+        });
     </script>
     <style>
-      body {background-color: rgb(255, 255, 255);
-            font-family: calibri;
-            color: rgb(70, 70, 70);}
-      h1   {color: rgb(90, 90, 90);
-      		text-indent: 1em}
-      h2   {color: rgb(110, 110, 110);
-      	    text-indent: 2em;}
-      h3   {color: rgb(130, 130, 130);
-      		text-indent: 3em;}
-      p	   {text-indent: 4em;}
-      a    {text-decoration: none;}
-      img.icon {height: 25px;
-                width: 25px;}
+	body {
+		background-color: rgb(255, 255, 255);
+		font-family: calibri;
+		color: rgb(70, 70, 70);}
+	h1 {
+		color: rgb(90, 90, 90);
+		text-indent: 1em}
+	h2 {
+		color: rgb(110, 110, 110);
+		text-indent: 2em;}
+	h3 {
+		color: rgb(130, 130, 130);
+		text-indent: 3em;}
+	p {
+		text-indent: 4em;}
+	a {
+	  	text-decoration: none;}
+	img.icon {
+		height: 25px;
+		width: 25px;}
+	.RssDiv {
+	    float: left;
+	    padding-right: 35px;}
     </style>
   </head>
   <body>
@@ -63,7 +74,7 @@
         <p>This is the website of Franklin Castillo, which I host in GitHub</p>
       <h2>Content</h2>
         <h3>Blog</h3>
-			<div id="divRss"></div>
+			<div id="MediumRss"></div>
         <h3>Academics</h3>
   </body>
 </html>
