--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
           name="description"
           content="Website of Frank R Castillo"/>
     <title>Frank R Castillo</title>
-    <link href="feedek/FeedEk.css"
+    <link href="files/stylesheet.css"
           rel="stylesheet"
           type="text/css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript" src="http://momentjs.com/downloads/moment-with-langs.min.js"></script>
-    <script type="text/javascript" src="feedek/FeedEk.js"></script>
+    <script type="text/javascript" src="files/FeedEk.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
             $('#MediumRss').FeedEk({
@@ -19,62 +19,71 @@
             	MaxCount: 100,
 				ShowDesc: false });
         });
+        
+		function visibleSection(sectionToEnable) {
+			document.getElementById("viewBlog").style.display = "none";
+			document.getElementById("viewAcad").style.display = "none";
+			document.getElementById(sectionToEnable).style.display = "inline";
+			
+		}
     </script>
     <style>
-	body {
-		background-color: rgb(255, 255, 255);
-		font-family: calibri;
-		color: rgb(70, 70, 70);}
-	h1 {
-		color: rgb(90, 90, 90);
-		text-indent: 1em}
-	h2 {
-		color: rgb(110, 110, 110);
-		text-indent: 2em;}
-	h3 {
-		color: rgb(130, 130, 130);
-		text-indent: 3em;}
-	p {
-		text-indent: 4em;}
-	a {
-	  	text-decoration: none;}
-	img.icon {
-		height: 25px;
-		width: 25px;}
-	.RssDiv {
-	    float: left;
-	    padding-right: 35px;}
+
     </style>
   </head>
   <body>
+	<table>
+		<tr>
+			<td id="navPane">
+			    <h1>Frank R. Castillo
+			    	<a href="https://medium.com/frank-r-castillo"
+			    	   target="_blank">
+				    	<img src="Icons/medium.png"
+				    	     class="icon"/>
+			        </a>
+			    	<a href="https://twitter.com/FrankRCastillo"
+			    	   target="_blank">
+				    	<img src="Icons/twitter.png"
+				    	     class="icon"/>
+			        </a>
+			    	<a href="https://www.linkedin.com/in/franklinrcastillo/"
+			    	   target="_blank">
+				    	<img src="Icons/linkedin.png"
+				    	     class="icon"/>
+			        </a>
+			    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g"
+			    	   target="_blank">
+				    	<img src="Icons/youtube.png"
+				    	     class="icon"/>
+			        </a>        
+			    </h1>
+			      <h2>About</h2>
+			        <p>This is the website of Franklin Castillo, which I host in GitHub</p>
+			      <h2>Content:
+			      	<ul id="content">
+						<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li>
+						<li><a href="javascript:visibleSection('viewAcad')">Academics</a></li>
+					</ul>
+			      </h2>
+			</td>
+			<td id="contentPane">
+		      	<div id="viewBlog">
+			        <h3>Blog:</h3>
+			        	<div id="MediumRss"></div>
+		        </div>
+		        <div id="viewAcad">
+		        	<h3>Academics:</h3>
+		        		<ul id="content">
+		        			<li>
+			        			<a href="https://www.youtube.com/playlist?list=PLE2R1NmwOzRkrWKHR8WKfXYBIhVv4OwTy">
+			        				Big Data Presentations
+			        			</a>
+		        			</li>
+		        		</ul>
+		        </div>
+			</td>
+		</tr>
 
-    <h1>Frank R. Castillo
-    	<a href="https://medium.com/frank-r-castillo"
-    	   target="_blank">
-	    	<img src="Icons/medium.png"
-	    	     class="icon"/>
-        </a>
-    	<a href="https://twitter.com/FrankRCastillo"
-    	   target="_blank">
-	    	<img src="Icons/twitter.png"
-	    	     class="icon"/>
-        </a>
-    	<a href="https://www.linkedin.com/in/franklinrcastillo/"
-    	   target="_blank">
-	    	<img src="Icons/linkedin.png"
-	    	     class="icon"/>
-        </a>
-    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g"
-    	   target="_blank">
-	    	<img src="Icons/youtube.png"
-	    	     class="icon"/>
-        </a>        
-    </h1>
-      <h2>About</h2>
-        <p>This is the website of Franklin Castillo, which I host in GitHub</p>
-      <h2>Content</h2>
-        <h3>Blog</h3>
-			<div id="MediumRss"></div>
-        <h3>Academics</h3>
+
   </body>
 </html>
