--- a/index.html
+++ b/index.html
@@ -39,27 +39,23 @@
 			    	<a href="https://medium.com/frank-r-castillo"
 			    	   target="_blank">
 				    	<img src="Icons/medium.png"
-				    	     class="icon"/>
-			        </a>
+				    	     class="icon"/></a>
 			    	<a href="https://twitter.com/FrankRCastillo"
 			    	   target="_blank">
 				    	<img src="Icons/twitter.png"
-				    	     class="icon"/>
-			        </a>
+				    	     class="icon"/></a>
 			    	<a href="https://www.linkedin.com/in/franklinrcastillo/"
 			    	   target="_blank">
 				    	<img src="Icons/linkedin.png"
-				    	     class="icon"/>
-			        </a>
+				    	     class="icon"/></a>
 			    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g"
 			    	   target="_blank">
 				    	<img src="Icons/youtube.png"
-				    	     class="icon"/>
-			        </a>        
+				    	     class="icon"/></a>        
 			    </h1>
 			      <h2>About</h2>
 			        <p>This is the website of Franklin Castillo, which I host in GitHub</p>
-			      <h2>Content:
+			      <h2>Content
 			      	<ul id="content">
 						<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li>
 						<li><a href="javascript:visibleSection('viewAcad')">Academics</a></li>
@@ -68,11 +64,11 @@
 			</td>
 			<td id="contentPane">
 		      	<div id="viewBlog">
-			        <h3>Blog:</h3>
+			        <h3>Blog</h3>
 			        	<div id="MediumRss"></div>
 		        </div>
 		        <div id="viewAcad">
-		        	<h3>Academics:</h3>
+		        	<h3>Academics</h3>
 		        		<ul id="content">
 		        			<li>
 			        			<a href="https://www.youtube.com/playlist?list=PLE2R1NmwOzRkrWKHR8WKfXYBIhVv4OwTy">
