--- a/index.html
+++ b/index.html
@@ -53,14 +53,22 @@
 				    	<img src="Icons/youtube.png"
 				    	     class="icon"/></a>        
 			    </h1>
-			      <h2>About</h2>
-			        <p>This is the website of Franklin Castillo, which I host in GitHub</p>
 			      <h2>Content
 			      	<ul id="content">
 						<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li>
 						<li><a href="javascript:visibleSection('viewAcad')">Academics</a></li>
 					</ul>
 			      </h2>
+			      <h2>About</h2>
+			        <p>
+			        	<i>I'm willing to have my ideas demolished.<br/>
+			        	Bring a proper wrecking ball.</i><br/><br/>
+			        	
+			        	I am a student, family man, US Marine, and programming enthusiast. I enjoy keeping up with politics, international relations, technology, economics, and finance. When I can, I write in my blog.<br/><br/>
+			        	I attend the University of South Florida; I hope to apply to their PhD in economics by 12/2017. In my research, I hope to find ways to mitigate the risk of money laundering for developing countries and financial institutions looking to do business with them. I also hold an MBA from University of South Florida Saint Petersburg. While in the Marines, I earned a BS in Political Science from University of Maryland University College.<br/><br/>
+			        	Prior to returning to school, I held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology.
+			        				        	
+			        </p>
 			</td>
 			<td id="contentPane">
 		      	<div id="viewBlog">
