--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		      name="description"
 		      content="Website of Frank R Castillo"/>
 		<title>Frank R Castillo</title>
-		<link href="files/stylesheet.css"
+		<link href="frankrcastillo.github.io/files/stylesheet.css"
 		      rel="stylesheet"
 		      type="text/css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
