--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			        </div>
 				</td>
 				<td id="selectorPane">
-					<h1>Frank R. Castillo</h1>
+					<h1>Frank R. Castillo
 					    	<a href="https://medium.com/frank-r-castillo" target="_blank">
 						    	<img src="Icons/medium.png" class="icon"/></a>
 					    	<a href="https://twitter.com/FrankRCastillo" target="_blank">
@@ -69,6 +69,7 @@
 						    	<img src="Icons/linkedin.png" class="icon"/></a>
 					    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
 						    	<img src="Icons/youtube.png" class="icon"/></a>
+			    	</h1>
 					<ul>
 						<div id="contentList">
 							<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li> | 
