--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		      name="description"
 		      content="Website of Frank R Castillo"/>
 		<title>Frank R Castillo</title>
-		<link href="frankrcastillo.github.io/files/stylesheet.css"
+		<link href="files/stylesheet.css"
 		      rel="stylesheet"
 		      type="text/css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -77,10 +77,6 @@
 							<li><a href="javascript:visibleSection('viewTwtr')">Twitter Feed</a></li>
 						</div>
 					</ul>
-				</td>
-			</tr>
-			<tr>
-				<td id="aboutPane">
 					<h2>About</h2>
 						<p>
 				        	<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>
