--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				<td id="selectorPane">
 					<h1>Frank R. Castillo
 					    	<a href="https://medium.com/frank-r-castillo" target="_blank">
-						    	<img src="Icons/medium.png" class="icon"/></a>
+						    	<img src="files/medium.png" class="icon"/></a>
 					    	<a href="https://twitter.com/FrankRCastillo" target="_blank">
-						    	<img src="Icons/twitter.png" class="icon"/></a>
+						    	<img src="files/twitter.png" class="icon"/></a>
 					    	<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-						    	<img src="Icons/linkedin.png" class="icon"/></a>
+						    	<img src="files/linkedin.png" class="icon"/></a>
 					    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-						    	<img src="Icons/youtube.png" class="icon"/></a>
+						    	<img src="files/youtube.png" class="icon"/></a>
 			    	</h1>
 					<ul>
 						<div id="contentList">
