--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 		</script>
 	</head>
 	<body>
+		<div id="background">
+			<img src="files/background.jpg"
+			     id="bgImg">
+		</div>
 		<table>
 			<tr>
 				<td id="selectorPane">
@@ -57,7 +61,7 @@
 						</div>
 					</ul>
 					<h2>About</h2>
-						<p>
+						<p style="text-align: justify;">
 				        	<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i>
 				        	
 				        	<br/><br/>
