--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</script>
 	</head>
 	<body>
-		<div id="background">
+		<div>
 			<img src="files/background.jpg"
 			     id="bgImg">
 		</div>
