--- a/index.html
+++ b/index.html
@@ -37,18 +37,14 @@
 	</head>
 	<body>
 		<table>
+		<div id="bgImg">
+			<img src="files/background.jpg"
+			     style="width: 100%;
+					    height: 100%">
+		</div>
 			<tr>
 				<td id="selectorPane">
-					<h1>Frank R. Castillo
-					    	<a href="https://medium.com/frank-r-castillo" target="_blank">
-						    	<img src="files/medium.png" class="icon"/></a>
-					    	<a href="https://twitter.com/FrankRCastillo" target="_blank">
-						    	<img src="files/twitter.png" class="icon"/></a>
-					    	<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-						    	<img src="files/linkedin.png" class="icon"/></a>
-					    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-						    	<img src="files/youtube.png" class="icon"/></a>
-			    	</h1>
+					<h1>Frank R. Castillo</h1>
 					<ul>
 						<div id="contentList">
 							<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li> | 
@@ -64,6 +60,18 @@
 				        	
 				        	I am a student, family man, US Marine, and programming enthusiast. I enjoy following and writing about topics of global relevance such as politics, international relations, technology, economics, finance, and culture. I currently attend University of South Florida where I'm currently completing math and programming pre-requisites, and hope to apply to the university's PhD in economics by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I also hold and MBA from University of South Florida Saint Petersburg. While on active duty in the United States Marine Corps, I earned a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology.
 			        	</p>
+					<h1>Social Media<br/>
+						<p>
+					    	<a href="https://medium.com/frank-r-castillo" target="_blank">
+						    	<img src="files/medium.png" class="icon"/></a>
+					    	<a href="https://twitter.com/FrankRCastillo" target="_blank">
+						    	<img src="files/twitter.png" class="icon"/></a>
+					    	<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
+						    	<img src="files/linkedin.png" class="icon"/></a>
+					    	<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
+						    	<img src="files/youtube.png" class="icon"/></a>
+						</p>
+			    	</h1>
 				</td>
 				<td id="contentPane"
 				    rowspan="2">
@@ -87,10 +95,6 @@
 			        </div>
 				</td>
 			</tr>
-		<div>
-			<img src="files/background.jpg"
-			     id="bgImg">
-		</div>
 		</table>
 	</body>
 </html>
