--- a/index.html
+++ b/index.html
@@ -62,9 +62,8 @@
 						</ul>
 					<h2>About</h2>
 						<p style="text-align: justify;">
-							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i>
-							<br/><br/>        
-							I am a student, family man, US Marine, and programming enthusiast. I enjoy following and writing about topics of global relevance such as politics, international relations, technology, economics, finance, and culture. I currently attend University of South Florida where I'm currently completing math and programming pre-requisites, and hope to apply to the university's PhD in economics by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I also hold and MBA from University of South Florida Saint Petersburg. While on active duty in the United States Marine Corps, I earned a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology.
+							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>        
+							I am a student, family man, US Marine, and programming enthusiast. I enjoy following and writing about topics of global relevance such as politics, international relations, technology, economics, finance, and culture. I currently attend the University of South Florida where I'm currently completing math and programming pre-requisites ahead of an application to the university's PhD in economics, which I hope to apply to by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I also hold and MBA from University of South Florida Saint Petersburg. While on active duty in the United States Marine Corps, I earned a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology.
 						</p>
 					<h2>Social Media</h2>
 						<p>
@@ -86,14 +85,16 @@
     				</div>
 					<div id="viewAcad">
 						<h3>Academics</h3>
-							<h4>YouTube<br>
-									<iframe width="720"
-											height="480"
-											src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRkrWKHR8WKfXYBIhVv4OwTy"
-											frameborder="0"
-											allowfullscreen>
-									</iframe>
-							</h4>
+							<ul>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)<br/><br/>
+									<li>
+										<iframe width="720"
+												height="480"
+												src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRkrWKHR8WKfXYBIhVv4OwTy"
+												frameborder="0"
+												allowfullscreen>
+										</iframe>
+									</li>
+							</ul>
     				</div>
 					<div id="viewTwtr">
 						<h3>Tweets</h3>
