--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
 		<table>
 			<tr>
 				<td id="selectorPane">
-					<h1>Frank R. Castillo</h1>
+					<h1>Frank R. Castillo
+						<a href="https://medium.com/frank-r-castillo" target="_blank">
+						<img src="files/medium.png" class="icon"/></a>
+						<a href="https://twitter.com/FrankRCastillo" target="_blank">
+						<img src="files/twitter.png" class="icon"/></a>
+						<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
+						<img src="files/linkedin.png" class="icon"/></a>
+						<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
+						<img src="files/youtube.png" class="icon"/></a>
+					</h1>
+					
 						<ul>
 							<div id="contentList">
 								<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li> | 
@@ -68,17 +78,6 @@
 						<p style="text-align: justify;">
 							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>        
 							I am a student, family man, US Marine, and programming enthusiast. I enjoy following and writing about topics of global relevance such as politics, international relations, technology, economics, finance, and culture. I currently attend the University of South Florida where I'm currently completing math and programming pre-requisites ahead of an application to the university's PhD in economics, which I hope to apply to by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I also hold and MBA from University of South Florida Saint Petersburg. While on active duty in the United States Marine Corps, I earned a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology.
-						</p>
-					<h2>Social Media</h2>
-						<p>
-							<a href="https://medium.com/frank-r-castillo" target="_blank">
-							<img src="files/medium.png" class="icon"/></a>
-							<a href="https://twitter.com/FrankRCastillo" target="_blank">
-							<img src="files/twitter.png" class="icon"/></a>
-							<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-							<img src="files/linkedin.png" class="icon"/></a>
-							<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-							<img src="files/youtube.png" class="icon"/></a>
 						</p>
 				</td>
 				<td id="contentPane"
