--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 						</ul>
 					<h2>About</h2>
 						<p style="text-align: justify;">
-							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>        
-							I am a student, family man, US Marine, and programming enthusiast. I enjoy following and writing about topics of global relevance such as politics, international relations, technology, economics, finance, and culture. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I also hold an MBA from University of South Florida Saint Petersburg. While on active duty in the United States Marine Corps, I earned a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology.
+							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a student, family man, US Marine, and programming enthusiast. I enjoy following and writing about topics of global relevance such as politics, international relations, technology, economics, finance, and culture. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2004.
 						</p>
 				</td>
 				<td id="contentPane"
@@ -94,7 +93,7 @@
 											height="300"
 											src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRkrWKHR8WKfXYBIhVv4OwTy"
 											frameborder="0"
-											allowfullscreen>
+											allowfullscreen
 									</iframe>
 								</p>
     				</div>
