--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 	</head>
 	<body>
 		<div id="bgImg">
-			<img	src="files/background.jpg"
-					style="width: 100%;
-					       height: 100%">
+			<img src="files/background.jpg"
+				 style="width: 100%;
+					    height: 100%">
 		</div>
 		<table>
 			<tr>
@@ -90,7 +90,7 @@
 											height="300"
 											src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRkrWKHR8WKfXYBIhVv4OwTy"
 											frameborder="0"
-											allowfullscreen
+											allowfullscreen>
 									</iframe>
 								</p>
     				</div>
