--- a/index.html
+++ b/index.html
@@ -26,17 +26,12 @@
 		        	MaxCount: 100,
 					ShowDesc: false
 				});
-		        $('#YoutubeRss').FeedEk({
-		        	FeedUrl: 'https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g',
-		        	MaxCount: 100,
-					ShowDesc: false
-				});
 	    	});
 
 			function visibleSection(sectionToEnable) {
-				var viewSecs = ["viewBlog",
-								"viewAcad",
-								"viewTwtr"];
+				var viewSecs = ["vBlog",
+								"vAcad",
+								"vTwtr"];
 				for ( i = 0; i < viewSecs.length; i++ ) {
 					document.getElementById(viewSecs[i]).style.display = "none";
 				}
@@ -52,37 +47,36 @@
 		</div>
 		<table>
 			<tr>
-				<td id="selectorPane">
+				<td id="slPne">
 					<h1>Frank R. Castillo
 						<a href="https://medium.com/frank-r-castillo" target="_blank">
-						<img src="files/medium.png" class="icon"/></a>
+						<img src="files/medium.png" class="ic"/></a>
 						<a href="https://twitter.com/FrankRCastillo" target="_blank">
-						<img src="files/twitter.png" class="icon"/></a>
+						<img src="files/twitter.png" class="ic"/></a>
 						<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-						<img src="files/linkedin.png" class="icon"/></a>
+						<img src="files/linkedin.png" class="ic"/></a>
 						<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-						<img src="files/youtube.png" class="icon"/></a>
+						<img src="files/youtube.png" class="ic"/></a>
 					</h1>
-					
-						<ul>
-							<div id="contentList">
-								<li><a href="javascript:visibleSection('viewBlog')">Blog</a></li> | 
-								<li><a href="javascript:visibleSection('viewAcad')">Academics</a></li> | 
-								<li><a href="javascript:visibleSection('viewTwtr')">Tweets</a></li>
-							</div>
-						</ul>
+					<ul>
+						<div id="ctLst">
+							<li><a href="javascript:visibleSection('vBlog')">Blog</a></li> | 
+							<li><a href="javascript:visibleSection('vAcad')">Academics</a></li> | 
+							<li><a href="javascript:visibleSection('vTwtr')">Tweets</a></li>
+						</div>
+					</ul>
 					<h2>About</h2>
 						<p style="text-align: justify;">
 							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a student, family man, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2004.
 						</p>
 				</td>
-				<td id="contentPane"
+				<td id="ctPne"
 					rowspan="2">
-					<div id="viewBlog">
+					<div id="vBlog">
 						<h3>Blog</h3>
 							<div id="MediumRss"></div>
     				</div>
-					<div id="viewAcad">
+					<div id="vAcad">
 						<h3>Academics</h3>
 							<h4>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)</h4>
 								<p>
@@ -94,7 +88,7 @@
 									</iframe>
 								</p>
     				</div>
-					<div id="viewTwtr">
+					<div id="vTwtr">
 						<h3>Tweets</h3>
 							<div id="TwitterRss"></div>
 					</div>
