--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<p>
 									<iframe width="400"
 											height="300"
-											src="https://www.youtube.com/playlist?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
+											src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
 											frameborder="0"
 											allowfullscreen>
 									</iframe>
