--- a/index.html
+++ b/index.html
@@ -48,16 +48,7 @@
 		<table>
 			<tr>
 				<td id="slPne">
-					<h1>Frank R. Castillo
-						<a href="https://medium.com/frank-r-castillo" target="_blank">
-						<img src="files/medium.png" class="ic"/></a>
-						<a href="https://twitter.com/FrankRCastillo" target="_blank">
-						<img src="files/twitter.png" class="ic"/></a>
-						<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-						<img src="files/linkedin.png" class="ic"/></a>
-						<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-						<img src="files/youtube.png" class="ic"/></a>
-					</h1>
+					<h1>Frank R. Castillo</h1>
 					<ul>
 						<div id="ctLst">
 							<li><a href="javascript:visibleSection('vBlog')">Blog</a></li> | 
@@ -68,6 +59,17 @@
 					<h2>About</h2>
 						<p style="text-align: justify;">
 							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a student, family man, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
+						</p>
+					<h2>Social Media</h2>
+						<p>
+							<a href="https://medium.com/frank-r-castillo" target="_blank">
+							<img src="files/medium.png" class="ic"/></a>
+							<a href="https://twitter.com/FrankRCastillo" target="_blank">
+							<img src="files/twitter.png" class="ic"/></a>
+							<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
+							<img src="files/linkedin.png" class="ic"/></a>
+							<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
+							<img src="files/youtube.png" class="ic"/></a>
 						</p>
 				</td>
 				<td id="ctPne"
