--- a/index.html
+++ b/index.html
@@ -43,22 +43,46 @@
 		<table>
 			<tr>
 				<td id="selPane">
-					<a href="javascript:visibleSection('vAbout')">		
-					<img id="profilePic" src="files/picture.jpg"/></a>
-					<a href="javascript:visibleSection('vBlog')">
-					<img src="files/blog.png" class="icon"/>
-					<a href="javascript:visibleSection('vAcad')">
-					<img src="files/academics.png" class="icon"/>				
-					<a href="https://medium.com/frank-r-castillo" target="_blank">
-					<img src="files/medium.png" class="icon"/></a>
-					<a href="https://twitter.com/FrankRCastillo" target="_blank">
-					<img src="files/twitter.png" class="icon"/></a>
-					<a href="https://twitter.com/FrankRCastillo" target="_blank">
-					<img src="files/github.png" class="icon"/></a>
-					<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
-					<img src="files/linkedin.png" class="icon"/></a>
-					<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
-					<img src="files/youtube.png" class="icon"/></a>
+					<div class="tooltip">
+						<a href="javascript:visibleSection('vAbout')">		
+						<img id="profilePic" src="files/picture.jpg"/></a>
+						<span class="tooltiptext">About Me</span>
+					</div>
+					<div class="tooltip">
+						<a href="javascript:visibleSection('vBlog')">
+						<img src="files/rss.png" class="icon"/>
+						<span class="tooltiptext">RSS Feeds</span>
+					</div>
+					<div class="tooltip">
+						<a href="javascript:visibleSection('vAcad')">
+						<img src="files/academics.png" class="icon"/>
+						<span class="tooltiptext">Academics</span>
+					</div>
+					<div class="tooltip">
+						<a href="https://medium.com/frank-r-castillo" target="_blank">
+						<img src="files/medium.png" class="icon"/></a>
+						<span class="tooltiptext">Medium</span>
+					</div>
+					<div class="tooltip">
+						<a href="https://twitter.com/FrankRCastillo" target="_blank">
+						<img src="files/twitter.png" class="icon"/></a>
+						<span class="tooltiptext">Twitter</span>
+					</div>
+					<div class="tooltip">
+						<a href="https://twitter.com/FrankRCastillo" target="_blank">
+						<img src="files/github.png" class="icon"/></a>
+						<span class="tooltiptext">GitHub</span>
+					</div>
+					<div class="tooltip">
+						<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
+						<img src="files/linkedin.png" class="icon"/></a>
+						<span class="tooltiptext">LinkedIn</span>
+					</div>
+					<div class="tooltip">
+						<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
+						<img src="files/youtube.png" class="icon"/></a>
+						<span class="tooltiptext">YouTube</span>
+					</div>
 				</td>
 				<td id="cntPane">
 					<div id="vAbout">
