--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<!--FeedEk used for RSS Reader-->
 	<head>
 		<meta	charset="utf-8"
-				name="description"
-				content="Website of Frank R Castillo"/>
+				name="viewport"
+				content="width=device-width"
+				initial-scale=1.0/>
 		<title>
 			Frank R Castillo
 		</title>
@@ -27,15 +28,14 @@
 					ShowDesc: false
 				});
 	    	});
-
-			function visibleSection(sectionToEnable) {
-				var viewSecs = ["vAbout",
-				                "vBlog",
-								"vAcad"];
-				for ( i = 0; i < viewSecs.length; i++ ) {
-					document.getElementById(viewSecs[i]).style.display = "none";
+			function makeVisible(enableCont) {
+				var content = ["aboutme",
+							   "blog",
+							   "academics"];
+				for ( i = 0; i < content.length; i++ ) {
+					document.getElementById(content[i]).style.display = "none";
 				}
-				document.getElementById(sectionToEnable).style.display = "inline";
+				document.getElementById(enableCont).style.display = "inline";
 			}
 		</script>
 	</head>
@@ -43,75 +43,50 @@
 		<table>
 			<tr>
 				<td id="selPane">
-					<div class="tooltip">
-						<a href="javascript:visibleSection('vAbout')">		
-						<img id="profilePic" src="files/picture.jpg"/></a>
-						<span class="tooltiptext">About Me</span>
-					</div>
-					<div class="tooltip">
-						<a href="javascript:visibleSection('vBlog')">
+						<a href="javascript:makeVisible('aboutme')">
+						<img src="files/home.png" class="icon"/>
+						<a href="javascript:makeVisible('blog')">
 						<img src="files/rss.png" class="icon"/>
-						<span class="tooltiptext">RSS Feeds</span>
-					</div>
-					<div class="tooltip">
-						<a href="javascript:visibleSection('vAcad')">
+						<a href="javascript:makeVisible('academics')">
 						<img src="files/academics.png" class="icon"/>
-						<span class="tooltiptext">Academics</span>
-					</div>
-					<div class="tooltip">
 						<a href="https://medium.com/frank-r-castillo" target="_blank">
 						<img src="files/medium.png" class="icon"/></a>
-						<span class="tooltiptext">Medium</span>
-					</div>
-					<div class="tooltip">
 						<a href="https://twitter.com/FrankRCastillo" target="_blank">
 						<img src="files/twitter.png" class="icon"/></a>
-						<span class="tooltiptext">Twitter</span>
-					</div>
-					<div class="tooltip">
 						<a href="https://twitter.com/FrankRCastillo" target="_blank">
 						<img src="files/github.png" class="icon"/></a>
-						<span class="tooltiptext">GitHub</span>
-					</div>
-					<div class="tooltip">
 						<a href="https://www.linkedin.com/in/franklinrcastillo/" target="_blank">
 						<img src="files/linkedin.png" class="icon"/></a>
-						<span class="tooltiptext">LinkedIn</span>
-					</div>
-					<div class="tooltip">
 						<a href="https://www.youtube.com/channel/UC2h-iPOAKbCe1eo8aA-Zf4g" target="_blank">
 						<img src="files/youtube.png" class="icon"/></a>
-						<span class="tooltiptext">YouTube</span>
-					</div>
 				</td>
 				<td id="cntPane">
-					<div id="vAbout">
+					<div id="aboutme">
 						<h2>Frank R. Castillo</h2>
-						<h3>About</h3>
-							<p style="text-align: justify;">
-								<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a student, family man, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
-							</p>
+						<img src="files/picture.jpg" id="profile"/>
+						<p>
+							<i>I'm willing to have my ideas demolished. Bring a proper wrecking ball.</i><br/><br/>I am a student, family man, US Marine, and programming enthusiast who follows and, when time allows, writes about politics, international relations, technology, economics, finance, and other topics of global relevance. I currently attend the University of South Florida where I'm completing math and programming pre-requisites towards an application to the university's PhD program in economics; I hope to submit my application by the end of 2017. Through my research, I hope to find ways to mitigate the risk of money laundering and fraud in developing economies. I hold an MBA from University of South Florida Saint Petersburg, as well as a BS in Political Science from University of Maryland University College. Professionally, I've held several positions as a contractor in the areas of Anti-Money Laundering, financial compliance, and information technology. I also served in the United States Marine Corps for nine years, concluding my service in 2013.
+						</p>
 					</div>
-					<div id="vBlog">
+					<div id="blog">
 						<h3>Blog</h3>
 						<div id="MediumRss"></div>
 						<h3>Tweets</h3>
 						<div id="TwitterRss"></div>
 					</div>
-					<div id="vAcad">
+					<div id="academics">
 						<h3>Academics</h3>
 							<h4>Presentations: Big Data and E-Commerce, University of South Florida (02/2017 - 05/2017)</h4>
-								<p>
-									<iframe width="400"
-											height="300"
-											src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
-											frameborder="0"
-											allowfullscreen>
-									</iframe>
-								</p>
-    				</div>
+							<p>
+								<iframe class="vidframes"
+										src="https://www.youtube.com/embed/videoseries?list=PLE2R1NmwOzRlSEfHmjxpgpqqoq3IGi2mB"
+										frameborder="0"
+										allowfullscreen>
+								</iframe>
+							</p>
+					</div>
 				</td>
-			</tr>
+			<tr>
 		</table>
 	</body>
 </html>
